--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
+emosic_emotion_classifier_model/*.safetensors filter=lfs diff=lfs merge=lfs -text
 emosic_emotion_classifier_model/model.safetensors filter=lfs diff=lfs merge=lfs -text
